src/style.css
html, body {
    background: #2d2d2d;
    color: #fff;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    /* margin: 0; */
    user-select: none;
}

#main {
    display: block;
    position: absolute;
    right: 50%;
    float: left;
    transform: translateX(50%);
    margin-top: 10%;
}
.selectedTab > a {
    color: #22ffc2 !important;
    border-top: 2px solid #22ffc2;
    border-bottom: 2px solid #22ffc2;
    cursor: default;
}
nav {
    margin-top: 14px;
    width: 100%;
    border-bottom: 2px solid #fff;
    padding-bottom: 36px;
}
nav > ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    position: absolute;
    right: 50%;
    float: left;
    transform: translateX(50%);
    width: 52.3%;
}
nav > ul > li {
    float: left;
}
nav > ul > li > a {
    display: block;
    color: #fff;
    text-decoration: none;
    text-align: center;
    padding: 1px 16px;
    transition: color 0.2s;
    cursor: pointer;
}
nav > ul > li:hover > a {
    color: #22ffc2;
    transition: color 0.2s;
}
nav > ul > li > img {
    padding: 1px 20px;
    transform: translateY(-25%);
}

button {
    background: #3d3d3d;
    color: #fff;
    border-radius: 8px;
    border: none;
    outline: none;
    transition: 0.1s ease-in;
}

button:hover {
    background: #4d4d4d;
    transition: 0.1s ease-in;
}
a {
    color: #22ffc2;
    transition: 0.2s ease;
    text-decoration-line: none;
}
a:hover {
    color: #1fb389;
    transition: 0.2s ease;
}
a:active {
    color: #7bffda;
    transition: 0.2s ease;
    text-decoration-line: none;
}

[rcm_detected] button#payload_inject:active {
    background: #22ffc2;
    color: #2d2d2d;
}

[rcm_undetected] button#payload_inject, button#payload_inject[no_payload] {
    transition: 0.1s ease-in;
    opacity: .75;
    pointer-events: none;
}
button#payload_inject {
    border-radius: 4px;
    padding: 2px;
    width: 70px;
}

select#payload_select {
    background: #3d3d3d;
    color: #fff;
    border-radius: 4px;
    border: none;
    outline: none;
    transition: 0.1s ease-in;
    text-align: right;
    padding: 2px;
    width: 100px;
}

select#payload_select:hover {
    background: #4d4d4d;
    transition: 0.1s ease-in;
}

#rcm_status {
    background: #227aff;
    color: #fff;
    text-align: center;
    width: 175px;
    border-radius: 4px;
    margin-top: 5px;
    transition: 0.3s ease;
}
#rcm_status:before {
    content: "?";
}

[rcm_detected] #rcm_status {
    background: #22ffc2;
    color: #000;
    transition: 0.3s ease;
}
[rcm_detected] #rcm_status:before {
    content: "✓";
}

[rcm_undetected] #rcm_status {
    background: #ff2222;
    color: #fff;
    transition: 0.3s ease;
}
[rcm_undetected] #rcm_status:before {
    content: "X";
}
.currentTab {
    color: #ff2222 !important;
    transition: 0.3s ease;
    pointer-events: none;
}
.selectedTab, .selectedTab:hover, .selectedTab {
    color: #9f22ff !important;
    transition: 0.3s ease;
}

